syntax = "proto3";

package deltav.model;

enum StorageType {
    UNKNOWN_STORAGE_TYPE = 0;
    HELIUM3_KG = 1;
    DEUTERIUM_KG = 2;
    WATER_KG = 3;
    ELECTRIC_JOULES = 4;
    HEAT_JOULES = 5;
}

message Storage {
    int64 amount = 1;
    StorageType type = 2;
}

message StorageRequest {
    repeated Storage storage = 1;
}

message StorageResponse {
    repeated Storage storage = 1;
    string err = 2;
}


service StorageTank {
    rpc WithdrawStorage(StorageRequest) returns (StorageResponse) {}
    rpc AddStorage(StorageRequest) returns (StorageResponse) {}
}   